<resources>
    <string name="app_name" translatable="false">AU557269 Movies</string>
    <string name="button_exit">Exit</string>
    <string name="details_userComment_text"><u>Comment</u></string>
    <string name="detail_userComment_text">Write a comment about this movie</string>
    <string name="details_genres_text">Genres:\u0020</string>
    <string name="movie_status_watched">Status: Watched</string>
    <string name="save_text">Save</string>
    <string name="edit_activity_user_rating">User rating:\u0020</string>
    <string name="editActivity_movieTitle_Placeholder">Movie Title</string>
    <string name="editActivity_userRating_Placeholder">User Rating: 5.5</string>
    <string name="editActivity_userComment_HelpText">Insert comment about movie</string>
    <string name="iMDB_Rating_Placeholder">iMDB: 5.5</string>
    <string name="rating_placeholder">5.5</string>
    <string name="details_iMDB">iMDB:\u0020 </string>
    <string name="MOVIE_LIST_FROM_PREV_SESSION" translatable="false">OBJECTS</string>
    <string name="User_Rating_Not_Set">Not set</string>
    <string name="edit_activity_clear_btn">Clear</string>
    <string name="no_prev_user_rating">Set your rating</string>
    <string name="edit_text_checkboxText">Have you seen this movie?</string>
    <string name="movie_status_unwatched">Status: Unwatched</string>
    <string name="Plot"><u>Plot</u></string>
    <string name="SEARCH_ACTIVITY_HINT_TEXT">Type movie name</string>
    <string name="SEARCH_ACTIVITY_SEARCH_BUTTON">Search</string>
    <string name="watchStatus">Watch status</string>
    <string name="DELETE_MODEL_BUTTON">Delete movie from database</string>
</resources>
